@@ -4,7 +4,7 @@
  *
  * Copyright (c) 2003-2007 Ethan Galstad (http://www.nagios.org)
  *
- * Last Modified: 10-19-2007
+ * Last Modified: 12-14-2007
  *
  * Description:
  *
@@ -54,8 +54,16 @@ int nebmodule_init(int flags, char *args, nebmodule *handle){
 	/* save our handle */
 	helloworld_module_handle=handle;
 
+	/* set some info - this is completely optional, as Nagios doesn't do anything with this data */
+	neb_set_module_info(helloworld_module_handle,NEBMODULE_MODINFO_TITLE,"helloworld");
+	neb_set_module_info(helloworld_module_handle,NEBMODULE_MODINFO_AUTHOR,"Ethan Galstad");
+	neb_set_module_info(helloworld_module_handle,NEBMODULE_MODINFO_TITLE,"Copyright (c) 2003-2007 Ethan Galstad");
+	neb_set_module_info(helloworld_module_handle,NEBMODULE_MODINFO_VERSION,"noversion");
+	neb_set_module_info(helloworld_module_handle,NEBMODULE_MODINFO_LICENSE,"GPL v2");
+	neb_set_module_info(helloworld_module_handle,NEBMODULE_MODINFO_DESC,"A simple example to get you started with Nagios Event Broker (NEB) modules.");
+
 	/* log module info to the Nagios log file */
-	write_to_all_logs("helloworld: Copyright (c) 2003-2005 Ethan Galstad (nagios@nagios.org)",NSLOG_INFO_MESSAGE);
+	write_to_all_logs("helloworld: Copyright (c) 2003-2007 Ethan Galstad (nagios@nagios.org)",NSLOG_INFO_MESSAGE);
 	
 	/* log a message to the Nagios log file */
 	snprintf(temp_buffer,sizeof(temp_buffer)-1,"helloworld: Hello world!\n");
